--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API RESTful",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "express-validator": "^4.2.1",
     "lusca": "^1.5.2",
     "mongoose": "^4.12.1",
+    "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4"
