--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API RESTful",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/**/*.test.js",
     "start": "node app.js"
   },
   "repository": {
@@ -35,5 +35,11 @@
     "node-sass-middleware": "^0.11.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "sinon": "^4.0.1",
+    "sinon-mongoose": "^2.0.2",
+    "supertest": "^3.0.0"
   }
 }
