--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "mocha": "^4.0.1",
     "sinon": "^4.0.1",
     "sinon-mongoose": "^2.0.2",
     "supertest": "^3.0.0"
