--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chalk": "^2.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^4.0.0",
-    "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.0.1",
@@ -32,7 +32,6 @@
     "lusca": "^1.5.2",
     "mongoose": "^4.12.1",
     "morgan": "^1.9.0",
-    "node-sass-middleware": "^0.11.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4"
   },
